--- a/Static-website/main.css
+++ b/Static-website/main.css
@@ -31,6 +31,11 @@ body{
     color:rgb(165, 190, 224);
 }
 
+.current {
+    background-color: #3366CC;
+}
+
+
 .head-menu-buttons:hover{
     background-color: #3366CC;     
     cursor: pointer;  
